tests/good/spamtest.siv
require ["spamtest", "relational"
       , "comparator-i;ascii-numeric"];

if spamtest :value "lt" :comparator "i;ascii-numeric" "0" {
	discard;
}

keep;