tests/bad/spamtestplus.siv
require ["spamtestplus", "spamtest", "relational"
       , "comparator-i;ascii-numeric"];

if spamtest :percent :value "lt" :comparator "i;ascii-numeric" "0" {
	discard;
}

keep;